# os-lab3

./: .gitignore  CMakeLists.txt  README.md  task.md
src/: main.cpp  os_simulation.cpp  os_simulation.hpp
tests/: test01.sh
